------------------

XLS
+++

- Added course_id, government_id and credits to Courses sheet import/export.

Bugfixes
++++++++

- Timetables evolution fails on exception days (https://launchpad.net/bugs/1003834)
- Advisory accordion doesn't show advisees (https://launchpad.net/bugs/1005989)
- Fix upgrade from schooltool < 1.5 crashing on missing levels (https://launchpad.net/bugs/1007361)


2.1.0 (2012-04-19)
------------------

Final release for Ubuntu 12.04 LTS

New features
++++++++++++

- Add Calendar tab, configure default tab (https://launchpad.net/bugs/938825)
- Add a background with hexes (https://launchpad.net/bugs/967233)
- XLS import now has Teachers and Students sheets
- Updated many translations, added Sinhalese (si).

Bugfixes
++++++++

- Fix date validation to not crash on years before 1900 (https://launchpad.net/bugs/960367)
- Fixed section delete view when school year was created with non-ascii title (https://launchpad.net/bugs/963740)
- Fixed resource views when the resource title has non-ascii characters (https://launchpad.net/bugs/916086)
- Show all demographics fields in person index view (https://launchpad.net/bugs/944471)
- XLS import automatically adds teachers and students to the corresponding groups
- Fix breakage if intervention plugin was used, but then disabled (https://launchpad.net/bugs/969221)
- Replace PIL dependency with Pillow to fix image libraries detection when
  building from source on Ubuntu.


2.0.3 (2012-03-19)
------------------

New features
++++++++++++

- Dynamic javascript person and other tables
- Can search persons and contacts by full name or partial names
- Add all search results button in relationship views
- Photos for persons (https://launchpad.net/bugs/683316)
- Added ID cards for persons and groups 
- Tab hiding (https://launchpad.net/bugs/938810)
- Sections need locations (https://launchpad.net/bugs/932920)
- Update jQuery to 1.7.1
- Add more options from paster to start-schooltool-instance.